--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
     <div class="wrapper">
         <div class="formboxlog">
             <h2>LOGIN</h2>
-                    <form action="C:\Users\ASUS\Desktop\mini\proj\page1.html">
+                    <form action="page1.html">
                         <div class="inputbox">
                             <input type="email" for="mail">
                             <label for="mail">email</label>
