--- a/page1.html
+++ b/page1.html
@@ -44,9 +44,10 @@ body {font-family: Arial, Helvetica, sans-serif;}
 				<ul>
                     <div id="mySidebar" class="sidebar">
                         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-                        <a href="#">About</a>
-                        <a href="#">Services</a>
-                        <a href="#">Clients</a>
+                        <a href="admin.html">Dashboard</a>
+                        <a href="page1.html">Manage User</a>
+                        <a href="#">Issue/Return</a>
+                        <a href="#">Manage Books</a>
                         <a href="#">Contact</a>
                       </div>
                       
@@ -124,7 +125,5 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 </div>
 </div>
-
-
 </body>
 </html> 
