--- a/page3.html
+++ b/page3.html
@@ -49,8 +49,54 @@ body {font-family: Arial, Helvetica, sans-serif;}
         <a href="#"> Issued Books</a> 
         <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
       </div>
-      
+   
+      <table class="tablestyle" border=" 2px solid #000" ">
+        <thead>
+          <tr>
+          <th>BookID</th>
+          <th>BookName</th>
+          <th>UserID</th>
+          <th>PersonName</th>
+          <th>Issued Date</th>
+          <th>Return Date</th>
+          <th>Renew</th>
+          <th>Due</th>
 
-    
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td data-label="BookID">1234</td>
+          <td data-label="BookName">Data Structure</td>
+          <td data-label="UserID">1001</td>
+          <td data-label="PersonName">Zoro</td>
+          <td data-label="Issued Date">09-03-2023</td>
+          <td data-label="Return Date">30-03-2023</td>
+          <td data-label="Renew"><a href="#" class="tablebtn"> Renew</a></td>
+          <td data-label="Due"><a href="#" class="tablebtn"> Pay Due</a></td>
+        </tr>
+        <tr>
+          <td data-label="BookID">1234</td>
+          <td data-label="BookName">Data Structure</td>
+          <td data-label="UserID">1001</td>
+          <td data-label="PersonName">Zoro</td>
+          <td data-label="Issued Date">09-03-2023</td>
+          <td data-label="Return Date">30-03-2023</td>
+          <td data-label="Renew"><a href="#" class="tablebtn"> Renew</a></td>
+          <td data-label="Due"><a href="#" class="tablebtn"> Pay Due</a></td>
+        </tr>
+        <tr>
+          <td data-label="BookID">1234</td>
+          <td data-label="BookName">Data Structure</td>
+          <td data-label="UserID">1001</td>
+          <td data-label="PersonName">Zoro</td>
+          <td data-label="Issued Date">09-03-2023</td>
+          <td data-label="Return Date">30-03-2023</td>
+          <td data-label="Renew"><a href="#" class="tablebtn"> Renew</a></td>
+          <td data-label="Due"><a href="#" class="tablebtn"> Pay Due</a></td>
+        </tr>
+      </tbody>
+      </table>
+  
 </body>
 </html>
