--- a/page1.html
+++ b/page1.html
@@ -45,9 +45,9 @@ body {font-family: Arial, Helvetica, sans-serif;}
                     <div id="mySidebar" class="sidebar">
                         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
                         <a href="admin.html">Dashboard</a>
-                        <a href="page1.html">Manage User</a>
+                        <a href="page3.html">Manage book</a>
                         <a href="#">Issue/Return</a>
-                        <a href="#">Manage Books</a>
+                        
                         <a href="#">Contact</a>
                       </div>
                       
