--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
     <div class="wrapper">
         <div class="formboxlog">
             <h2>LOGIN</h2>
-                    <form action="C:\Users\ASUS\Desktop\mini\proj\page1.html">
+                    <form action="page1.html">
                         <div class="inputbox">
                             <span class="icon">
                                 <ion-icon name="mail"></ion-icon>
