--- a/admin.html
+++ b/admin.html
@@ -75,7 +75,7 @@ nav a:hover {
   height: 100px;
   margin: 0px 30px 0px 30px;
   display: flex;
-  background: #292929;
+  background: linear-gradient(45deg,#47cebe,#ef4a82);
   justify-content: center;
   box-shadow: 4px  4px  4px rgb(4, 4, 4),-4px -4px -4px rgb(240, 240, 240);
   align-items: center;
