--- a/login.html
+++ b/login.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+    <div class="bg">
+        <div class="bg-overlay">
+
+        
    <div class="topichead">
     <h2 style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">
         LIBRARY <div class="topichead2" style="font-family:sans-serif;">
@@ -16,13 +20,11 @@
         </div>
     </h2>
    </div>
-    <button class="log">LOGIN
-
-    </button>
+    <button class="log">LOGIN</button>
     <div class="wrapper">
         <div class="formboxlog">
             <h2>LOGIN</h2>
-                    <form onsubmit="return validate()" action="page1.html">
+                    <form onsubmit="return validate()" action="admin.html">
                         <div class="inputbox">
                             <span class="icon">
                                 <ion-icon name="mail"></ion-icon>
@@ -82,6 +84,7 @@
                     </script>
         </div>
     </div>
-    
+</div>
+</div>   
 </body>
 </html>
