--- a/admin.html
+++ b/admin.html
@@ -21,7 +21,7 @@
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="admin.html">
             <span class="icon">
               <ion-icon name="reader-outline"></ion-icon>
             </span>
@@ -29,7 +29,7 @@
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="adminviewbooks.html">
             <span class="icon">
               <ion-icon name="library-outline"></ion-icon>
             </span>
@@ -37,7 +37,7 @@
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="adminissuepage.html">
             <span class="icon">
               <ion-icon name="folder-open-outline"></ion-icon>
             </span>
@@ -45,7 +45,7 @@
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="adminviewissued.html">
             <span class="icon">
               <ion-icon name="layers-outline"></ion-icon>
             </span>
@@ -53,7 +53,7 @@
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="adminaddbookpage.html">
             <span class="icon">
               <ion-icon name="duplicate-outline"></ion-icon>
             </span>
@@ -61,7 +61,7 @@
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="adminmanagefine.html">
             <span class="icon">
               <ion-icon name="cash-outline"></ion-icon>
             </span>
@@ -69,7 +69,7 @@
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="adminmanageonlinedue.html">
             <span class="icon">
               <ion-icon name="wallet-outline"></ion-icon>
             </span>
@@ -88,7 +88,7 @@
           <ion-icon name="notifications-outline"></ion-icon>
         </div>
         <div class="user">
-          <img src="lib1.jpg" alt="">
+          <img src="img2.jpg" alt="">
         </div>
       </div>
       <!--Cards-->
@@ -129,6 +129,53 @@
           <div class="iconbox">
             <ion-icon name="cash-outline"></ion-icon>
           </div>
+        </div>
+      </div>
+      <!-- Books -->
+      <div class="details">
+        <div class="recent">
+        <div class="cardheader">
+          <h2>Recent Books</h2>
+          <a href="" class="btn">View All</a>
+        </div>
+        <table>
+          <thead>
+            <tr>
+              <th>BookID</th>
+              <th>Book</th>
+              <th>BookName</th>
+              <th>Book description</th>
+              <th>Category</th>
+              <th>Price</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>BookID</td>
+              <td>Book</td>
+              <td>BookName</td>
+              <td>Book description</td>
+              <td>Category</td>
+              <td>Price</td>
+            </tr>
+            <tr>
+              <td>BookID</td>
+              <td>Book</td>
+              <td>BookName</td>
+              <td>Book description</td>
+              <td>Category</td>
+              <td>Price</td>
+            </tr>
+            <tr>
+              <td>BookID</td>
+              <td>Book</td>
+              <td>BookName</td>
+              <td>Book description</td>
+              <td>Category</td>
+              <td>Price</td>
+            </tr>
+          </tbody>
+        </table>
         </div>
       </div>
     </div>
