--- a/page1.html
+++ b/page1.html
@@ -25,17 +25,93 @@ body {font-family: Arial, Helvetica, sans-serif;}
 <link rel="stylesheet" href="page1styles.css">
 <body>
   
-<div class="navbar">
-  <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a>  
-  <a href="C:\Users\ASUS\Desktop\mini\proj\page3.html"> Issued Books</a> 
-  
-  <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
-
-</div>
+   <!--Navigation-->
+   <div class="container">
+    <div class="navigation">
+      <ul>
+        <li>
+          <a href="#">
+            <span class="icon">
+              <ion-icon name="library-sharp"></ion-icon>
+            </span>
+            <span class="title">LMS</span>
+          </a>
+        </li>
+        <li>
+            <a href="admin.html">
+                <span class="icon">
+                  <ion-icon name="reader-outline"></ion-icon>
+                </span>
+                <span class="title">Dashboard</span>
+              </a>
+            </li>
+            <li>
+              <a href="adminviewbooks.html">
+                <span class="icon">
+                  <ion-icon name="library-outline"></ion-icon>
+                </span>
+                <span class="title">Manage Book</span>
+              </a>
+            </li>
+            <li>
+              <a href="adminissuepage.html">
+                <span class="icon">
+                  <ion-icon name="folder-open-outline"></ion-icon>
+                </span>
+                <span class="title">Issue Book</span>
+              </a>
+            </li>
+            <li>
+              <a href="adminviewissued.html">
+                <span class="icon">
+                  <ion-icon name="layers-outline"></ion-icon>
+                </span>
+                <span class="title">View Issued Books</span>
+              </a>
+            </li>
+            <li>
+              <a href="adminaddbookpage.html">
+                <span class="icon">
+                  <ion-icon name="duplicate-outline"></ion-icon>
+                </span>
+                <span class="title">Add Books</span>
+              </a>
+            </li>
+            <li>
+              <a href="adminmanagefine.html">
+                <span class="icon">
+                  <ion-icon name="cash-outline"></ion-icon>
+                </span>
+                <span class="title">Manage Fines</span>
+              </a>
+            </li>
+            <li>
+              <a href="adminmanageonlinedue.html">
+                <span class="icon">
+                  <ion-icon name="wallet-outline"></ion-icon>
+                </span>
+                <span class="title">Dues Paid</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+         <!--Main-->
+        <div class="main">
+          <div class="topbar">
+            <div class="toggle">
+              <ion-icon name="menu-outline"></ion-icon>
+            </div>
+            <div class="search">
+              <ion-icon name="notifications-outline"></ion-icon>
+            </div>
+            <div class="user">
+              <img src="img2.jpg" alt="">
+            </div>
+          </div>
 <div class="container">
   <form action="" class="searchbar">
     <input type="text " placeholder="search anything " name="q">
-    <button type="submit"> <img src="search1.jpg " id="search" >
+    <button type="submit"> <ion-icon name="search"></ion-icon id="search" >
     </button>
   </form>
 </div>
@@ -82,6 +158,30 @@ body {font-family: Arial, Helvetica, sans-serif;}
 </div>
 </div>
 
+<script>
+  //add hovered class to selected list item
+  let list=document.querySelectorAll(".navigation li");
 
+  function activeLink(){
+    list.forEach(item=>{
+      item.classList.remove("hovered");
+    });
+    this.classList.add("hovered")
+  }
+  list.forEach(item=>item.addEventListener("mouseover",activeLink))
+
+  // menu Toggle
+  let toggle=document.querySelector(".toggle");
+  let navigation=document.querySelector(".navigation");
+  let main=document.querySelector(".main");
+
+  toggle.onclick=function(){
+    navigation.classList.toggle("active");
+    main.classList.toggle("active");
+  };
+</script>
+<!--icon-->
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html> 
