--- a/page1.html
+++ b/page1.html
@@ -111,7 +111,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 <div class="container">
   <form action="" class="searchbar">
     <input type="text " placeholder="search anything " name="q">
-    <button type="submit"> <ion-icon name="search"></ion-icon id="search" >
+    <button type="submit"> <ion-icon name="search" style="color: white; "></ion-icon id="search" >
     </button>
   </form>
 </div>
