--- a/page3.html
+++ b/page3.html
@@ -132,7 +132,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
           <td data-label="PersonName">Zoro</td>
           <td data-label="Issued Date">09-03-2023</td>
           <td data-label="Return Date">30-03-2023</td>
-          <td data-label="Renew"><a href="#" class="tablebtn"> Renew</a></td>
+          <td data-label="Renew"><a href="#" class="tablebtn1"> Renew</a></td>
           <td data-label="Due"><a href="#" class="tablebtn"> Pay Due</a></td>
         </tr>
         <tr>
@@ -142,7 +142,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
           <td data-label="PersonName">Zoro</td>
           <td data-label="Issued Date">09-03-2023</td>
           <td data-label="Return Date">30-03-2023</td>
-          <td data-label="Renew"><a href="#" class="tablebtn"> Renew</a></td>
+          <td data-label="Renew"><a href="#" class="tablebtn1"> Renew</a></td>
           <td data-label="Due"><a href="#" class="tablebtn"> Pay Due</a></td>
         </tr>
         <tr>
@@ -152,7 +152,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
           <td data-label="PersonName">Zoro</td>
           <td data-label="Issued Date">09-03-2023</td>
           <td data-label="Return Date">30-03-2023</td>
-          <td data-label="Renew"><a href="#" class="tablebtn"> Renew</a></td>
+          <td data-label="Renew"><a href="#" class="tablebtn1"> Renew</a></td>
           <td data-label="Due"><a href="#" class="tablebtn"> Pay Due</a></td>
         </tr>
       </tbody>
