--- a/adminmanagefine.html
+++ b/adminmanagefine.html
@@ -9,34 +9,8 @@
     <style>
 body {font-family: Arial, Helvetica, sans-serif;}
 
-.navbar {
-  width: 100%;
-  background-color: #e92d2d;
-  overflow: auto;
-}
 
-.navbar a {
-  float: left;
-  padding: 12px;
-  color: white;
-  text-decoration: none;
-  font-size: 17px;
-}
 
-.navbar a:hover {
-  background-color: #000;
-}
-
-.active {
-  background-color: #366956;
-}
-
-@media screen and (max-width: 500px) {
-  .navbar a {
-    float: none;
-    display: block;
-  }
-}
 
 
     </style>
@@ -127,8 +101,9 @@ body {font-family: Arial, Helvetica, sans-serif;}
                 <img src="img2.jpg" alt="">
               </div>
             </div>
-   
+            <div class="rec">
       <table class="tablestyle" border=" 2px solid #000" >
+       
         <thead>
           <tr>
           <th>BookID</th>
@@ -165,7 +140,9 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 
       </tbody>
+       
       </table>
+    </div>
       <script>
         //add hovered class to selected list item
         let list=document.querySelectorAll(".navigation li");
