--- a/adminmanageonlinedue.html
+++ b/adminmanageonlinedue.html
@@ -98,6 +98,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
                 <img src="img2.jpg" alt="">
               </div>
             </div>
+       <div class=".rec">
       <table class="tablestyle" border=" 2px solid #000" >
         <thead>
           <tr>
@@ -154,6 +155,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
       </tbody>
       </table>
+      </div>
       <script>
         //add hovered class to selected list item
         let list=document.querySelectorAll(".navigation li");
