--- a/page1.html
+++ b/page1.html
@@ -6,20 +6,6 @@
 body {font-family: Arial, Helvetica, sans-serif;}
 
 
-.navbar a:hover {
-  background-color: #000;
-}
-
-.active {
-  background-color: #366956;
-}
-
-@media screen and (max-width: 500px) {
-  .navbar a {
-    float: none;
-    display: block;
-  }
-}
 
 </style>
 <link rel="stylesheet" href="page1styles.css">
@@ -46,7 +32,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
               </a>
             </li>
             <li>
-              <a href="adminviewissued.html">
+              <a href="page2.html">
                 <span class="icon">
                   <ion-icon name="library-outline"></ion-icon>
                 </span>
@@ -98,7 +84,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
     <div class="subjectbox">
       <img src="java.jpg" alt="">
       <h3>JAVA</h3>
-      <a href="#" class="btn">see books</a>
+      <a href="page2.html" class="btn">see books</a>
     </div>
     
       <div class="subjectbox">
