--- a/login.html
+++ b/login.html
@@ -79,9 +79,13 @@
     else{
         return true;
     }
+    if(text="admin@123.com"){
+        
+    }
 }
 
-                    </script>
+
+</script>
         </div>
     </div>
 </div>
