--- a/page1.html
+++ b/page1.html
@@ -32,7 +32,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
               </a>
             </li>
             <li>
-              <a href="page2.html">
+              <a href="page3.html">
                 <span class="icon">
                   <ion-icon name="library-outline"></ion-icon>
                 </span>
@@ -40,11 +40,11 @@ body {font-family: Arial, Helvetica, sans-serif;}
               </a>
             </li>
             <li>
-              <a href="adminissuepage.html">
+              <a href="page4.html">
                 <span class="icon">
                   <ion-icon name="folder-open-outline"></ion-icon>
                 </span>
-                <span class="title">Issued Books</span>
+                <span class="title">Due!</span>
               </a>
             </li>
           
