--- a/adminaddbookpage.html
+++ b/adminaddbookpage.html
@@ -116,7 +116,10 @@
                     <label for="publish">Publisher</label>
                     <input type="text" placeholder="Publisher name" name="name" required >
                 </div>
-               
+                <div class="inputbox">
+                  <label for="dor">Book Description</label>
+                  <input type="text" placeholder="name" name="name" required >
+              </div>
                 
                 <div class="inputbox">
                     <label for="imgg">enter image of book</label>
