--- a/adminviewissued.html
+++ b/adminviewissued.html
@@ -121,7 +121,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
           <td data-label="Issued Date">09-03-2023</td>
           <td data-label="Return Date">30-03-2023</td>
           <td data-label="Status">-30 </a></td>
-          <td data-label="Action"><a href="#" class="tablebtn"> </a></td>
+          <td data-label="Action"><a href="#" class="tablebtn"><ion-icon name="mail-outline"></ion-icon> </a></td>
         </tr>
         <td data-label="BookID">1261</td>
           <td data-label="BookName">Java</td>
@@ -130,7 +130,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
           <td data-label="Issued Date">09-03-2023</td>
           <td data-label="Return Date">10-04-2023</td>
           <td data-label="Status" >-111</td>
-          <td data-label="Action"> </td>
+          <td data-label="Action"><a href="#" class="tablebtn"><ion-icon name="mail-outline"></ion-icon> </a> </td>
         </tr>
 
 
