--- a/adminmanagefine.html
+++ b/adminmanagefine.html
@@ -125,8 +125,8 @@ body {font-family: Arial, Helvetica, sans-serif;}
           <td data-label="PersonName">Z</td>
           <td data-label="Issued Date">09-03-2023</td>
           <td data-label="Due Date">30-03-2023</td>
-          <td data-label="fine"><a href="#" class="tablebtn"> </a></td>
-          <td data-label="Action"><a href="#" class="tablebtn"> </a></td>
+          <td data-label="fine">200</td>
+          <td data-label="Action"><a href="#" class="tablebtn"><ion-icon name="mail-outline"></ion-icon> </a></td>
         </tr>
         <td data-label="BookID">1261</td>
           <td data-label="BookName">Java</td>
@@ -134,8 +134,8 @@ body {font-family: Arial, Helvetica, sans-serif;}
           <td data-label="PersonName">R</td>
           <td data-label="Issued Date">09-03-2023</td>
           <td data-label="Due Date">10-04-2023</td>
-          <td data-label="fine"><a href="#" class="tablebtn"> </a></td>
-          <td data-label="Action"><a href="#" class="tablebtn"> </a></td>
+          <td data-label="fine">150</td>
+          <td data-label="Action"><a href="#" class="tablebtn"> <ion-icon name="mail-outline"></ion-icon></a></td>
         </tr>
 
 
