--- a/page1.html
+++ b/page1.html
@@ -84,7 +84,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
     <div class="subjectbox">
       <img src="java.jpg" alt="">
       <h3>JAVA</h3>
-      <a href="page2.html" class="btn">see books</a>
+      <a href="file:///C:/Users/HP/OneDrive/Documents/GitHub/library-management/page2.html" class="btn">see books</a>
     </div>
     
       <div class="subjectbox">
